--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,12 @@ body {
     list-style: none;
 }
 .ability {
-  margin-bottom: 0.7em;
-  padding-left: 1em;
+  margin-bottom: 0.7rem;
+  padding-left: 1rem;
   clear:left;
 }
 .ability-label {
-  font-size: 1.1em;
+  font-size: 1.1rem;
   font-weight: 500;
   display: block;
   clear: left;
@@ -32,42 +32,77 @@ body {
   color: #e90;
 }
 .ability-index-section {
-    font-size: 1em;
+    font-size: 1rem;
     height: 1px;
     border-bottom: 1px solid #ddd;
-    margin-left: -1em;
-    margin-top: 1.5em;
-    margin-bottom: 0.5em;
-    margin-right: 0.8em;
+    margin-left: -1rem;
+    margin-top: 1.5rem;
+    margin-bottom: 0.5rem;
+    margin-right: 0.8rem;
 }
 .ability-index-section span {
-    margin-top: -.7em;
+    margin-top: -.7rem;
     display: block;
     float: left;
     background-color: #fff;
-    padding-right: .5em;
+    padding-right: .5rem;
     text-transform: uppercase;
     color: #888;
     color: var(--gray);
 }
+.ability-index-section a {
+    display: block;
+    position: relative;
+    top: -4rem;
+    visibility: hidden;
+}
 #sorting {
     position:sticky;
     bottom:0;
-    background-color: #fff;
 }
 #sorting nav {
-    padding: 5px;
+    padding: 0.2rem;
 }
 #alpha-index {
   position: sticky;
-  top: 2px;
+  top: 3.6rem;
 }
 
 #gb3abilities .nav>li>a.nav-link {
-  padding: 0 10px;
+  padding: 0 0.5rem;
   text-align: center;
   text-transform: uppercase;
 }
 #gb3abilities .nav>li>a.nav-link.active {
-  padding: 3px 10px;
+  padding: 0.1rem 0.5rem;
+}
+
+/******************************************************************************/
+
+#derives-list {
+    padding-left: 0;
+    list-style: none;
+}
+.derive {
+  margin-bottom: 0.7rem;
+  padding-left: 1rem;
+  clear:left;
+}
+
+.derive-result {
+  font-size: 1.1rem;
+  font-weight: 500;
+  display: block;
+  clear: left;
+}
+
+.derive-bases {
+}
+
+.derive-bases:before {
+    content: 'Bases:';
+    margin-left: -40px;
+}
+
+.derive-bases > li {
 }
